# kisz-time-series

./: .gitignore  CODE_OF_CONDUCT.md  README.md  contributing.md  main.py  pyproject.toml  pytest.ini  test.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  change_content.md
data/: datasets.md
notebooks/: 01_Introduction.ipynb  A01_Loading_data.ipynb  A02_Basic_plotting.ipynb  nb_config.py
