[project]
name = "kisz-time-series"
version = "1.0.0"
description = "Code and resources for the OpenHPI course Time Series Analysis and Forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
]
